--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,7 +13,7 @@
             <h2>Hello, <%= user.username %></h2>
         </div>
         <div class="team-right-section">
-            <h2>Total Score: <span id="totalScore">10000</span></h2>
+            <h2>Total Score: <span id="totalScore">10000000</span></h2>
         </div>
     </div>
     <div class="container">
